# macrotis

./: Cargo.toml  build.rs
.github/workflows/: ci.yml  release.yml
locales/: en.toml
src/: actions.rs  color.rs  config.rs  image_info.rs  macros.rs  main.rs
src/config/: color.rs  imp.rs  mod.rs
src/widgets/: image_info.rs  mod.rs  zoomable_image.rs
src/windows/: help_window.rs  main_window.rs  mod.rs
