[package]
name = "macrotis"
version = "0.1.0"
edition = "2024"

[dependencies]
# UI
gpui = { git = "https://github.com/zed-industries/zed" }
# ashpd broken on wayland, see https://github.com/zed-industries/zed/pull/46543
# gpui = "0.2.2"

rust-i18n = "3.1"
bytesize = "2.3.1"

# Image handling
imagesize = "0.14"

# Configuration
clap = { version = "4.5", features = ["derive", "color"] }
clap-serde-derive = "0.2"
confy = { version = "2.0", features = ["toml_conf"] }
paste = "1.0"
serde = "1.0"

# Error handling
anyhow = "1.0"
anstyle = "1.0.13"

[build-dependencies]
# Used for generating manpages, completions and an example config
clap = { version = "4.5", features = ["derive"] }
clap_mangen = "0.2"
clap-serde-derive = "0.2"
clap_complete = "4.5.65"
serde = "1.0"
paste = "1.0"
toml = "0.9.11"

[features]
default = []
build-time = []
